<resources>
    <string name="app_name">RoflanMovies</string>
    <string name="_34">Т-34</string>
    <string name="_2h19m">2h19m</string>
    <string name="pricl">Военное / Приключение</string>
    <string name="_2019">2019</string>
    <string name="todo">TODO</string>
    <string name="_12">Вход</string>
    <string name="_13">Регистрация</string>
    <string name="roflan_movies">Roflan Movies</string>
    <string name="todo">TODO</string>
    <string name="new_movies">New movies</string>
    <string name="roflan_movies">Roflan Movies</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
</resources>